implement friends route
