# app.js
@@ -9,6 +9,7 @@ const {
   userRouter,
   noticeRouter,
   newsRouter,
+  friendsRouter,
 } = require("./routes");
 
 const app = express();
@@ -27,6 +28,7 @@ app.use("/users", userRouter);
 app.use("/pets", petRouter);
 app.use("/notices", noticeRouter);
 app.use("/news", newsRouter);
+app.use("/friends", friendsRouter);
 
 app.use((req, res) => {
   res.status(404).json({ message: "Not found" });
